Fix Movie Card layout issues

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -1,3 +1,8 @@
+.container {
+  width: 100%;
+}
+
 .movie-card {
   border: 1px solid#aaa;
+  width: 465px;
 }
